# cppbp-gj

./: CMakeLists.txt  README.md
configured_files/: config.hpp.in
src/: CMakeLists.txt  constants.hpp  draw_helpers.cpp  draw_helpers.hpp  gamestate.cpp  gamestate.hpp  main.cpp
src/geometry/: geom_funcs.cpp  geom_funcs.hpp  plane.hpp  point2.hpp  point2f.hpp  point3.hpp  point3f.hpp
src/objects/: exit.cpp  exit.hpp  grass.cpp  grass.hpp  object.cpp  object.hpp  tree.cpp  tree.hpp
test/: CMakeLists.txt
